--- a/Web/Views/Category/GetAllCategory.cshtml
+++ b/Web/Views/Category/GetAllCategory.cshtml
@@ -52,10 +52,16 @@
                               d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z" />
                     </svg>
                 </div>
-                <input type="text"
-                       id="search-categories"
-                       class="block w-full p-2 pl-10 pr-4 text-sm text-gray-900 border border-gray-300 rounded-lg bg-white focus:ring-2 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                       placeholder="Tìm kiếm danh mục..." />
+                <div class="relative w-full">
+                    <input type="text"
+                           id="search-categories"
+                           class="block w-full p-2 pl-4 pr-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-white focus:ring-2 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                           placeholder="Tìm kiếm danh mục..." />
+                    <span class="absolute right-2 top-2 text-gray-500">
+                        <i class="fas fa-search"></i>
+                    </span>
+                </div>
+
 
             </div>
             <div>
